--- a/whether/whether.html
+++ b/whether/whether.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="city-list">
             <table>
-                <thead> <td class="city-list">List of Countries</td></thead>
+                <thead> <td class="city-heading">List of Countries</td></thead>
                 <tbody>
                 <tr><td class="city-name">Toronto</td></tr>
                 <tr><td class="city-name">Manhattan</td></tr>
@@ -29,7 +29,8 @@
     
     <div class="card">
         <div class="weather">
-            <img src="" alt="Raining" class="weather-icon">
+            <h2>Whether Details</h2>
+            <img src="" class="weather-icon">
             <h1 class="temp">22°C</h1>
             <h2 class="city"></h2>
             <div class="details">
