added documentation on code structure

--- a/login/login.html
+++ b/login/login.html
@@ -3,24 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Whether Application</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <!-- Login page   -->
     <div class="login-container">
         <div class="login-form">
+            <!-- Heading  -->
             <h1 class="login-title">Login-Page</h1>
+            <!-- Username -->
             <div class="input-group">
                 <input type="username" id="username" required>
                 <label  for="username">Username</label>
             </div>
+            <!-- Password -->
             <div class="input-group">
                 <input type="password" id="password" required>
                 <label for="password">Password</label>
             </div>
+            <!-- Submit Button  -->
             <button id="loginBtn">Login</button>
         </div>
     </div>
+    <!-- Link Javascript file -->
     <script src="./script.js"></script>
 </body>
 </html>
