--- a/whether/whether.html
+++ b/whether/whether.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="./whether.css">
 </head>
 <body>
+    <!-- Whether Application -->
     <div class="container">
+        <!-- city-list  -->
         <div class="city-list">
             <table>
+                <!--city-heading  -->
                 <thead> <td class="city-heading">List of Countries</td></thead>
                 <tbody>
                 <tr><td class="city-name">Toronto</td></tr>
@@ -26,13 +29,16 @@
             </tbody>
             </table>
         </div>
-    
+    <!-- wether-card  -->
     <div class="card">
         <div class="weather">
             <h2>Whether Details</h2>
             <img src="" class="weather-icon">
+            <!-- Temperature -->
             <h1 class="temp">22°C</h1>
+            <!-- City -->
             <h2 class="city"></h2>
+            <!-- Humidity  -->
             <div class="details">
                 <div class="col">
                     <img src="../assets/images/humidity.png" alt="Humidity">
@@ -41,6 +47,7 @@
                         <p>Humidity</p>
                     </div>
                 </div>
+                <!-- Wind-Speed  -->
                 <div class="col">
                     <img src="../assets/images/wind.png" alt="Humidity">
                     <div>
